--- a/test/scss/has-dependents.scss
+++ b/test/scss/has-dependents.scss
@@ -1,4 +1,4 @@
 $first: $blue;
 $global-variable: $red !global;
 $references: $first;
-$scss-function-with-variable: darken($red, 5%);
+$scss-function-with-variable: quote($red);
