--- a/test/scss/scoped.scss
+++ b/test/scss/scoped.scss
@@ -2,7 +2,7 @@
   $first: 15px;
   $global-variable: $first + 2 !global;
   $color: #123;
-  $global-with-function: darken($color, 5%) !global;
+  $global-with-function: quote($color) !global;
 }
 
 html {
